--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -12,8 +12,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body style="background-color: darkslategray;">
   <app-root></app-root>
+
 </body>
   
 </html>
